--- a/Source/MovieDatabase.ipynb
+++ b/Source/MovieDatabase.ipynb
@@ -2,10 +2,138 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Movies': {'Back to the Future': {'Cover': '../Assets/MovieCovers/BackToTheFuture.jpg',\n",
+      "                                   'Description': 'Marty McFly, a 17-year-old '\n",
+      "                                                  'high school student, is '\n",
+      "                                                  'accidentally sent 30 years '\n",
+      "                                                  'into the past in a '\n",
+      "                                                  'time-traveling DeLorean '\n",
+      "                                                  'invented by his close '\n",
+      "                                                  'friend, the maverick '\n",
+      "                                                  'scientist Doc Brown.',\n",
+      "                                   'Rating': 'number of stars',\n",
+      "                                   'Release': '1985',\n",
+      "                                   'Title': 'Back to the Future'},\n",
+      "            'Dirty Dancing': {'Cover': '../Assets/MovieCovers/DirtyDancing.jpg',\n",
+      "                              'Description': 'd',\n",
+      "                              'Rating': 'number of stars',\n",
+      "                              'Release': '1978',\n",
+      "                              'Title': 'Grease'},\n",
+      "            'Grease': {'Cover': '../Assets/MovieCovers/Grease.jpg',\n",
+      "                       'Description': 'Good girl Sandy Olsson and greaser '\n",
+      "                                      'Danny Zuko fell in love over the '\n",
+      "                                      'summer. When they unexpectedly discover '\n",
+      "                                      \"they're now in the same high school, \"\n",
+      "                                      'will they be able to rekindle their '\n",
+      "                                      'romance?',\n",
+      "                       'Rating': 'number of stars',\n",
+      "                       'Release': '1978',\n",
+      "                       'Title': 'Grease'},\n",
+      "            'Home Alone': {'Cover': '../Assets/MovieCovers/HomeAlone.jpg',\n",
+      "                           'Description': 'd',\n",
+      "                           'Rating': 'number of stars',\n",
+      "                           'Release': '1978',\n",
+      "                           'Title': 'Grease'},\n",
+      "            'Indiana Jones and the Raiders of the Lost Ark': {'Cover': '../Assets/MovieCovers/IndianaJonesAndTheRaidersOfTheLostArk.jpg',\n",
+      "                                                              'Description': 'd',\n",
+      "                                                              'Rating': 'number '\n",
+      "                                                                        'of '\n",
+      "                                                                        'stars',\n",
+      "                                                              'Release': '1978',\n",
+      "                                                              'Title': 'Grease'},\n",
+      "            'Jurassic Park': {'Cover': '../Assets/MovieCovers/JurassicPark.jpg',\n",
+      "                              'Description': 'd',\n",
+      "                              'Rating': 'number of stars',\n",
+      "                              'Release': '1978',\n",
+      "                              'Title': 'Grease'},\n",
+      "            'Love Actually': {'Cover': '../Assets/MovieCovers/LoveActually.jpg',\n",
+      "                              'Description': 'd',\n",
+      "                              'Rating': 'number of stars',\n",
+      "                              'Release': '1978',\n",
+      "                              'Title': 'Grease'},\n",
+      "            'Titanic': {'Cover': '../Assets/MovieCovers/Titanic.jpg',\n",
+      "                        'Description': 'd',\n",
+      "                        'Rating': 'number of stars',\n",
+      "                        'Release': '1978',\n",
+      "                        'Title': 'Grease'}}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pprint import pprint \n",
+    "\n",
+    "# Movie dictionary creation\n",
+    "database = {}\n",
+    "\n",
+    "database[\"Movies\"] = {\n",
+    "    \"Grease\": {\n",
+    "        \"Title\": \"Grease\",\n",
+    "        \"Release\": \"1978\",\n",
+    "        \"Description\": \"Good girl Sandy Olsson and greaser Danny Zuko fell in love over the summer. When they unexpectedly discover they're now in the same high school, will they be able to rekindle their romance?\",\n",
+    "        \"Cover\": \"../Assets/MovieCovers/Grease.jpg\",\n",
+    "        \"Rating\": \"number of stars\"\n",
+    "    },\n",
+    "    \"Back to the Future\": {\n",
+    "       \"Title\": \"Back to the Future\",\n",
+    "        \"Release\": \"1985\",\n",
+    "        \"Description\": \"Marty McFly, a 17-year-old high school student, is accidentally sent 30 years into the past in a time-traveling DeLorean invented by his close friend, the maverick scientist Doc Brown.\",\n",
+    "        \"Cover\": \"../Assets/MovieCovers/BackToTheFuture.jpg\",\n",
+    "        \"Rating\": \"number of stars\" \n",
+    "    },\n",
+    "    \"Dirty Dancing\": {\n",
+    "       \"Title\": \"Grease\",\n",
+    "        \"Release\": \"1978\",\n",
+    "        \"Description\": \"d\",\n",
+    "        \"Cover\": \"../Assets/MovieCovers/DirtyDancing.jpg\",\n",
+    "        \"Rating\": \"number of stars\", \n",
+    "    },\n",
+    "    \"Home Alone\": {\n",
+    "       \"Title\": \"Grease\",\n",
+    "        \"Release\": \"1978\",\n",
+    "        \"Description\": \"d\",\n",
+    "        \"Cover\": \"../Assets/MovieCovers/HomeAlone.jpg\",\n",
+    "        \"Rating\": \"number of stars\", \n",
+    "    },\n",
+    "    \"Love Actually\": {\n",
+    "       \"Title\": \"Grease\",\n",
+    "        \"Release\": \"1978\",\n",
+    "        \"Description\": \"d\",\n",
+    "        \"Cover\": \"../Assets/MovieCovers/LoveActually.jpg\",\n",
+    "        \"Rating\": \"number of stars\", \n",
+    "    },\n",
+    "    \"Titanic\": {\n",
+    "       \"Title\": \"Grease\",\n",
+    "        \"Release\": \"1978\",\n",
+    "        \"Description\": \"d\",\n",
+    "        \"Cover\": \"../Assets/MovieCovers/Titanic.jpg\",\n",
+    "        \"Rating\": \"number of stars\", \n",
+    "    },\n",
+    "    \"Indiana Jones and the Raiders of the Lost Ark\": {\n",
+    "       \"Title\": \"Grease\",\n",
+    "        \"Release\": \"1978\",\n",
+    "        \"Description\": \"d\",\n",
+    "        \"Cover\": \"../Assets/MovieCovers/IndianaJonesAndTheRaidersOfTheLostArk.jpg\",\n",
+    "        \"Rating\": \"number of stars\", \n",
+    "    },\n",
+    "    \"Jurassic Park\": {\n",
+    "       \"Title\": \"Grease\",\n",
+    "        \"Release\": \"1978\",\n",
+    "        \"Description\": \"d\",\n",
+    "        \"Cover\": \"../Assets/MovieCovers/JurassicPark.jpg\",\n",
+    "        \"Rating\": \"number of stars\", \n",
+    "    },\n",
+    "    \n",
+    "}\n",
+    "\n",
+    "pprint(database)\n"
+   ]
   },
   {
    "attachments": {},
@@ -29,7 +157,7 @@
     "The Wizard of Oz (1939)\n",
     "Forrest Gump (1994)\n",
     "Die Hard (1988)\n",
-    "E.T. the Extra-Terrestrial (1982)\t7.9\t\n",
+    "E.T. the Extra-Terrestrial (1982)\t\n",
     "Pirates of the Caribbean: The Curse of the Black Pearl (2003)\n",
     "The Goonies (1985)\n",
     "Ghostbusters (1984)\n",
@@ -67,8 +195,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
