completed alphabetical sort function

--- a/Source/MovieDatabase.ipynb
+++ b/Source/MovieDatabase.ipynb
@@ -417,25 +417,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Alien',\n",
+      " 'Avatar',\n",
+      " 'Back to the Future',\n",
+      " \"Bridget Jones's Diary\",\n",
+      " 'Casablanca',\n",
+      " 'Die Hard',\n",
+      " 'Dirty Dancing',\n",
+      " 'E.T. the Extra-Terrestrial',\n",
+      " 'Edward Scissorhands',\n",
+      " 'Elf',\n",
+      " 'Finding Nemo',\n",
+      " 'Forrest Gump',\n",
+      " 'Ghostbusters',\n",
+      " 'Gladiator',\n",
+      " 'Grease',\n",
+      " 'Groundhog Day',\n",
+      " \"Harry Potter and the Sorcerer's Stone\",\n",
+      " 'Home Alone',\n",
+      " 'Indiana Jones and the Raiders of the Lost Ark',\n",
+      " \"It's a Wonderful Life\",\n",
+      " 'Jaws',\n",
+      " 'Jurassic Park',\n",
+      " 'Life of Brian',\n",
+      " 'Love Actually',\n",
+      " 'Mary Poppins',\n",
+      " 'Mean Girls',\n",
+      " 'Monsters, Inc.',\n",
+      " 'Monty Python and the Holy Grail',\n",
+      " 'Pirates of the Caribbean: The Curse of the Black Pearl',\n",
+      " 'Psycho',\n",
+      " 'Pulp Fiction',\n",
+      " 'Rocky',\n",
+      " 'Romeo + Juliet',\n",
+      " 'Romeo and Juliet',\n",
+      " \"Singin' in the Rain\",\n",
+      " 'Star Wars: Episode IV - A New Hope',\n",
+      " 'The Dark Knight',\n",
+      " 'The Godfather',\n",
+      " 'The Good, the Bad and the Ugly',\n",
+      " 'The Goonies',\n",
+      " 'The Lion King',\n",
+      " 'The Lord of the Rings: The Fellowship of the Ring',\n",
+      " 'The Matrix',\n",
+      " 'The Shawshank Redemption',\n",
+      " 'The Silence of the Lambs',\n",
+      " 'The Terminator',\n",
+      " 'The Wizard of Oz',\n",
+      " 'Titanic',\n",
+      " 'Top Gun',\n",
+      " 'Toy Story']\n"
+     ]
+    }
+   ],
    "source": [
     "# when sorting the dictionary contents, create empty array, loop through the original database (multiple times) and add necessary \n",
-    "# componets to the array\n",
+    "# components to the array\n",
     "# sorting the dictionary alphabetically A-Z\n",
-    "sorted_keys = sorted(database[\"Movies\"])\n",
+    "A_Z_sorted_keys = sorted(database[\"Movies\"])\n",
     "# sorting the dictionary alphabetically Z-A\n",
-    "sorted_keys = sorted(database[\"Movies\"] , reverse=True)\n",
-    "# pprint(sorted_keys)"
+    "Z_A_sorted_keys = sorted(database[\"Movies\"] , reverse=True)\n",
+    "pprint(A_Z_sorted_keys)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'Cover': '../Assets/MovieCovers/Alien.jpg',\n",
+      "  'Description': 'The crew of a commercial spacecraft encounter a deadly '\n",
+      "                 'lifeform after investigating an unknown transmission.',\n",
+      "  'Rating': '',\n",
+      "  'Release': '1979',\n",
+      "  'Title': 'Alien'},\n",
+      " {'Cover': '../Assets/MovieCovers/Avatar.jpg',\n",
+      "  'Description': 'A paraplegic Marine dispatched to the moon Pandora on a '\n",
+      "                 'unique mission becomes torn between following his orders and '\n",
+      "                 'protecting the world he feels is his home.',\n",
+      "  'Rating': '',\n",
+      "  'Release': '2009',\n",
+      "  'Title': 'Avatar'},\n",
+      " {'Cover': '../Assets/MovieCovers/BackToTheFuture.jpg',\n",
+      "  'Description': 'Marty McFly, a 17-year-old high school student, is '\n",
+      "                 'accidentally sent 30 years into the past in a time-traveling '\n",
+      "                 'DeLorean invented by his close friend, the maverick '\n",
+      "                 'scientist Doc Brown.',\n",
+      "  'Rating': '',\n",
+      "  'Release': '1985',\n",
+      "  'Title': 'Back to the Future'},\n",
+      " {'Cover': \"../Assets/MovieCovers/BridgetJones'sDiary.jpg\",\n",
+      "  'Description': 'Bridget Jones is determined to improve herself while she '\n",
+      "                 'looks for love in a year in which she keeps a personal '\n",
+      "                 'diary.',\n",
+      "  'Rating': '',\n",
+      "  'Release': '2001',\n",
+      "  'Title': \"Bridget Jones's Diary\"},\n",
+      " {'Cover': '../Assets/MovieCovers/Casablanca.jpg',\n",
+      "  'Description': 'A cynical expatriate American cafe owner struggles to decide '\n",
+      "                 'whether or not to help his former lover and her fugitive '\n",
+      "                 'husband escape the Nazis in French Morocco.',\n",
+      "  'Rating': '',\n",
+      "  'Release': '1942',\n",
+      "  'Title': 'Casablanca'},\n",
+      " {'Cover': '../Assets/MovieCovers/DieHard.jpg',\n",
+      "  'Description': 'A New York City police officer tries to save his estranged '\n",
+      "                 'wife and several others taken hostage by terrorists during a '\n",
+      "                 'Christmas party at the Nakatomi Plaza in Los Angeles.',\n",
+      "  'Rating': '',\n",
+      "  'Release': '1988',\n",
+      "  'Title': 'Die Hard'},\n",
+      " {'Cover': '../Assets/MovieCovers/DirtyDancing.jpg',\n",
+      "  'Description': 'Spending the summer at a Catskills resort with her family, '\n",
+      "                 \"Frances (Baby) Houseman falls in love with the camp's dance \"\n",
+      "                 'instructor, Johnny Castle.',\n",
+      "  'Rating': '',\n",
+      "  'Release': '1987',\n",
+      "  'Title': 'Dirty Dancing'},\n",
+      " {'Cover': '../Assets/MovieCovers/E.T.TheExtra-Terrestrial.jpg',\n",
+      "  'Description': 'A troubled child summons the courage to help a friendly '\n",
+      "                 'alien escape from Earth and return to his home planet.',\n",
+      "  'Rating': '',\n",
+      "  'Release': '1982',\n",
+      "  'Title': 'E.T. the Extra-Terrestrial'},\n",
+      " {'Cover': '../Assets/MovieCovers/EdwardScissorhands.jpg',\n",
+      "  'Description': 'The solitary life of an artificial man - who was '\n",
+      "                 'incompletely constructed and has scissors for hands - is '\n",
+      "                 'upended when he is taken in by a suburban family.',\n",
+      "  'Rating': '',\n",
+      "  'Release': '1990',\n",
+      "  'Title': 'Edward Scissorhands'},\n",
+      " {'Cover': '../Assets/MovieCovers/Elf.jpg',\n",
+      "  'Description': 'Raised as an oversized elf, Buddy travels from the North '\n",
+      "                 'Pole to New York City to meet his biological father, Walter '\n",
+      "                 \"Hobbs, who doesn't know he exists and is in desperate need \"\n",
+      "                 'of some Christmas spirit.',\n",
+      "  'Rating': '',\n",
+      "  'Release': '2003',\n",
+      "  'Title': 'Elf'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# User selects Sort Alphabetically A-Z\n",
+    "A_Z_array = []\n",
+    "Z_A_array = []\n",
+    "alpha = \"zzzzzzzzzzzzzzzz\"\n",
+    "rev_alpha = \"\"\n",
+    "info_add = None\n",
+    "\n",
+    "# loop through each key/title and its value/info, items returns a doublet\n",
+    "for title1, info1 in database[\"Movies\"].items():\n",
+    "    # reset the \"a\" value every loop\n",
+    "    alpha = \"zzzzzzzzzzzzzzzz\"\n",
+    "    # second loop to compare the current title to all other titles\n",
+    "    for title2, info2 in database[\"Movies\"].items():\n",
+    "        # print(\"alpha\", alpha, \"title2\", title2)\n",
+    "        if title2 <= alpha:\n",
+    "            if not info2 in A_Z_array:\n",
+    "                alpha = title2\n",
+    "                info_add = info2\n",
+    "    A_Z_array.append(info_add)\n",
+    "pprint(A_Z_array[:10])\n",
+    "\n",
+    "# User selects Sort Alphabetically Z-A\n",
+    "# loop through each key/title and its value/info, items returns a doublet\n",
+    "for title1, info1 in database[\"Movies\"].items():\n",
+    "    # reset the \"z\" value every loop\n",
+    "    rev_alpha = \"\"\n",
+    "    # second loop to compare the current title to all other titles\n",
+    "    for title2, info2 in database[\"Movies\"].items():\n",
+    "        # print(\"rev alpha\", rev_alpha , \"title2\", title2, \"check\", (rev_alpha <= title2))\n",
+    "        if title2 >= rev_alpha:\n",
+    "            if not info2 in Z_A_array:\n",
+    "                rev_alpha = title2\n",
+    "                info_add = info2\n",
+    "    Z_A_array.append(info_add)\n",
+    "# pprint(Z_A_array[:10])\n",
+    "\n",
+    "# print(\"at\" < \"\")"
+   ]
   },
   {
    "cell_type": "code",
